--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^16.13.1",
     "react-full-screen": "^0.2.4",
     "react-pdf": "^4.1.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "video-react": "^0.14.1"
   },
   "scripts": {
     "start": "react-scripts start",
